k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monkeyscloud
  labels:
    app.kubernetes.io/part-of: monkeyscloud
